links and fix slider

--- a/recovery.html
+++ b/recovery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header class="section header bg-white">
+    <header class="section header">
 
         <div class="container">
 
@@ -55,9 +55,9 @@
                     <div class="header__box__top">
                         <div class="header__box__top__group">
                             <img src="img/header/man.png" alt="man">
-                            <a href="#" class="header__enter text-hover">Вход</a>
+                            <a href="./enter.html" class="header__enter text-hover">Вход</a>
                             <span>/</span>
-                            <a href="#" class="header__reg text-hover">Регистрация</a>
+                            <a href="./enter.html" class="header__reg text-hover">Регистрация</a>
                         </div>
                     </div>
 
@@ -85,22 +85,22 @@
 
         <section data-nav class="section nav nav--invisible">
             <div class="nav__box">
-                <a href="#" class="nav__enter">Вход</a>
+                <a href="./enter.html" class="nav__enter">Вход</a>
                 <span>/</span>
-                <a href="#" class="nav__reg">регистрация</a>
+                <a href="./enter.html" class="nav__reg">регистрация</a>
             </div>
             <div class="nav__container container">
                 <img src="img/header/close.png" alt="close" class="nav__close">
                 <nav class="nav__row row">
 
-                    <a href="#" class="nav__link nav__link--active">Главная</a>
-                    <a href="#" class="nav__link text-hover">Кредиты и займы</a>
-                    <a href="#" class="nav__link text-hover">Кредитные карты</a>
-                    <a href="#" class="nav__link text-hover">Ипотека</a>
-                    <a href="#" class="nav__link text-hover">Автокредиты</a>
-                    <a href="#" class="nav__link text-hover">Инвестиции</a>
-                    <a href="#" class="nav__link text-hover">Банкротство</a>
-                    <a href="#" class="nav__link text-hover">Страхование</a>
+                    <a href="./index.html" class="nav__link">Главная</a>
+                    <a href="./credits.html" class="nav__link text-hover">Кредиты и займы</a>
+                    <a href="./credits.html" class="nav__link text-hover">Кредитные карты</a>
+                    <a href="./credits.html" class="nav__link text-hover">Ипотека</a>
+                    <a href="./credits.html" class="nav__link text-hover">Автокредиты</a>
+                    <a href="./credits.html" class="nav__link text-hover">Инвестиции</a>
+                    <a href="./credits.html" class="nav__link text-hover">Банкротство</a>
+                    <a href="./credits.html" class="nav__link text-hover">Страхование</a>
 
                 </nav>
             </div>
@@ -112,7 +112,7 @@
             <div class="nav__container nav__container--second container">
 
                 <nav class="nav__row row nav__row--second">
-                    <a href="#" class="text-hover nav__link nav__link--second">Главная</a>
+                    <a href="./index.html" class="text-hover nav__link nav__link--second">Главная</a>
                     <p class="nav__link nav__link--second">Восстановление пароля</p>
                 </nav>
             </div>
