--- a/politics.html
+++ b/politics.html
@@ -55,9 +55,9 @@
                     <div class="header__box__top">
                         <div class="header__box__top__group">
                             <img src="img/header/man.png" alt="man">
-                            <a href="#" class="header__enter text-hover">Вход</a>
+                            <a href="./enter.html" class="header__enter text-hover">Вход</a>
                             <span>/</span>
-                            <a href="#" class="header__reg text-hover">Регистрация</a>
+                            <a href="./enter.html" class="header__reg text-hover">Регистрация</a>
                         </div>
                     </div>
 
@@ -85,22 +85,22 @@
 
         <section data-nav class="section nav nav--invisible">
             <div class="nav__box">
-                <a href="#" class="nav__enter">Вход</a>
+                <a href="./enter.html" class="nav__enter">Вход</a>
                 <span>/</span>
-                <a href="#" class="nav__reg">регистрация</a>
+                <a href="./enter.html" class="nav__reg">регистрация</a>
             </div>
             <div class="nav__container container">
                 <img src="img/header/close.png" alt="close" class="nav__close">
                 <nav class="nav__row row">
 
-                    <a href="#" class="nav__link nav__link--active">Главная</a>
-                    <a href="#" class="nav__link text-hover">Кредиты и займы</a>
-                    <a href="#" class="nav__link text-hover">Кредитные карты</a>
-                    <a href="#" class="nav__link text-hover">Ипотека</a>
-                    <a href="#" class="nav__link text-hover">Автокредиты</a>
-                    <a href="#" class="nav__link text-hover">Инвестиции</a>
-                    <a href="#" class="nav__link text-hover">Банкротство</a>
-                    <a href="#" class="nav__link text-hover">Страхование</a>
+                    <a href="./index.html" class="nav__link">Главная</a>
+                    <a href="./credits.html" class="nav__link text-hover">Кредиты и займы</a>
+                    <a href="./credits.html" class="nav__link text-hover">Кредитные карты</a>
+                    <a href="./credits.html" class="nav__link text-hover">Ипотека</a>
+                    <a href="./credits.html" class="nav__link text-hover">Автокредиты</a>
+                    <a href="./credits.html" class="nav__link text-hover">Инвестиции</a>
+                    <a href="./credits.html" class="nav__link text-hover">Банкротство</a>
+                    <a href="./credits.html" class="nav__link text-hover">Страхование</a>
 
                 </nav>
             </div>
@@ -112,7 +112,7 @@
             <div class="nav__container nav__container--second container">
 
                 <nav class="nav__row row nav__row--second">
-                    <a href="#" class="text-hover nav__link nav__link--second">Главная</a>
+                    <a href="./index.html" class="text-hover nav__link nav__link--second">Главная</a>
                     <p class="nav__link nav__link--second">Политика конфиденциальности</p>
                 </nav>
             </div>
@@ -205,6 +205,7 @@
 
     </main>
 
+
     <footer class="footer section">
 
         <div class="container footer__container">
@@ -219,10 +220,10 @@
             <p class="footer__text">© 2021 ООО «Л-Корпорация». При использовании материалов гиперссылка на Ruscur.ru обязательна. <br> Свидетельство на товарный знак № 445945 от 18.10.2011г.</p>
 
             <div class="footer__box">
-                <a href="#" class="footer__link footer__link--active">О нас</a>
-                <a href="#" class="text-hover footer__link">Политика конфиденциальности</a>
-                <a href="#" class="text-hover footer__link">Пользовательское соглашение</a>
-                <a href="#" class="text-hover footer__link">Согласие на обработку персональных данных</a>
+                <a href="./we.html" class="footer__link">О нас</a>
+                <a href="./politics.html" class="text-hover footer__link footer__link--active">Политика конфиденциальности</a>
+                <a href="./agreement.html" class="text-hover footer__link">Пользовательское соглашение</a>
+                <a href="./data.html" class="text-hover footer__link">Согласие на обработку персональных данных</a>
             </div>
 
         </div>
